reformat(scrapper): reformat code